Rolled back lines for home headers (THEY MUST BE LIKE THAT, in opposite to Default.xml, otherwise translations won't work)
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6664 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -1535,8 +1535,8 @@
 
 <!-- Watermarks -->
 <watermarks>
-	<watermark target="CHomeViewCtrl.Header1" path="257.PNG"/>
-	<watermark target="CHomeViewCtrl.Header2" path="258.PNG"/>
+	<watermark target="CHomeViewCtrl.Header" path="257.PNG"/>
+	<watermark target="CHomeViewCtrl.Header" path="258.PNG"/>
 </watermarks>
 <!-- Documents -->
 <documents>
