Fixed portuguese not showing up in the language selection dialog
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6670 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/default-pt-br.xml
+++ b/Languages/default-pt-br.xml
@@ -18,7 +18,7 @@
 		link="http://shareaza.sourceforge.net/"
 		email="contact(at)shareaza(dot)com"
 		version="2.3.1.1"
-		type="Idioma"
+		type="language"
 		language="pt-br"
 		prompt="Clique aqui para traduzir o Shareaza para o português do Brasil."
 		dir="ltr"
