Fix compiler warning C4267: conversion from 'size_t' to 'DWORD', possible loss of data Fix compiler warning C4100: unreferenced formal parameter
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@6681 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/Languages/Old/default-ar.xml
+++ b/Languages/Old/default-ar.xml
@@ -2635,7 +2635,7 @@
 	<string id="8179" value="(مسح البحث المؤقت)"/>
 	<string id="8180" value="File size must be"/>
 	<string id="8181" value="&#160;to"/><!-- size from xx TO xx-->
-	<string id="8208" value="Shareaza is creating hashes for %i file(s):"/>
+	<string id="8208" value="Shareaza is creating hashes for %Iu file(s):"/>
 	<string id="8223" value="%i days and %i hours"/>
 	<string id="8224" value="Shareaza is downloading:"/>
 	<string id="8225" value="This download is paused:"/>
