--- a/Languages/default-hu.xml
+++ b/Languages/default-hu.xml
@@ -2557,7 +2557,7 @@
 	<string id="8179" value="(előzmények törlése)"/>
 	<string id="8180" value="Fájlméret"/>
 	<string id="8181" value="&#160;-"/><!-- size from xx TO xx-->
-	<string id="8208" value="%i fájl hashelése:"/>
+	<string id="8208" value="%Iu fájl hashelése:"/>
 	<string id="8223" value="%i nap %i óra"/>
 	<string id="8224" value="Letöltés folyamatban:"/>
 	<string id="8225" value="Letöltés szüneteltetve:"/>
