--- a/Languages/default-sq.xml
+++ b/Languages/default-sq.xml
@@ -2578,7 +2578,7 @@
 	<string id="8179" value="(Pastro Historinë Kërkimore)"/>
 	<string id="8180" value="Përmasa e skedës të jetë nga"/>
 	<string id="8181" value="&#160;në"/><!-- size from xx TO xx-->
-	<string id="8208" value="Shareaza po krijon hashe për %i skeda:"/>
+	<string id="8208" value="Shareaza po krijon hashe për %Iu skeda:"/>
 	<string id="8223" value="%i ditë %i orë"/>
 	<string id="8224" value="Shareaza po shkarkon:"/>
 	<string id="8225" value="Kjo shkarkesë po pushon:"/>
