--- a/Languages/default-ru.xml
+++ b/Languages/default-ru.xml
@@ -2611,7 +2611,7 @@
 	<string id="8179" value="(Очистить историю поисков)"/>
 	<string id="8180" value="Размер файла должен быть"/>
 	<string id="8181" value="&#160;до"/><!-- size from xx TO xx-->
-	<string id="8208" value="Shareaza создает хешы для %i файла(ов):"/>
+	<string id="8208" value="Shareaza создает хешы для %Iu файла(ов):"/>
 	<string id="8223" value="%i д. и %i час."/>
 	<string id="8224" value="Shareaza загружает:"/>
 	<string id="8225" value="Загрузка приостановлена:"/>
