--- a/Languages/default-sl-SI.xml
+++ b/Languages/default-sl-SI.xml
@@ -2600,7 +2600,7 @@
 	<string id="8179" value="(Pobriši zgodovino iskanja)"/>
 	<string id="8180" value="Velikost datoteke more biti"/>
 	<string id="8181" value="&#160;do"/><!-- size from xx TO xx-->
-	<string id="8208" value="Shareaza ustvarja izvlečke (hashes) za število datotek %i:"/>
+	<string id="8208" value="Shareaza ustvarja izvlečke (hashes) za število datotek %Iu:"/>
 	<string id="8223" value="%i dni in %i ur"/>
 	<string id="8224" value="Shareaza prenaša:"/>
 	<string id="8225" value="Prenos je trenutno prekinjen:"/>
