--- a/Languages/default-en.xml
+++ b/Languages/default-en.xml
@@ -32,7 +32,7 @@
 		<separator/>
 		<button id="ID_TAB_HOME" text="Home"/>
 		<button id="ID_TAB_LIBRARY" text="Library"/>
-		<button id="ID_TAB_MEDIA" text="Media"/>
+		<button id="ID_TAB_MEDIA" text="Media Player"/>
 		<button id="ID_TAB_SEARCH" text="Search"/>
 		<button id="ID_TAB_TRANSFERS" text="Downloads"/>
 	</toolbar>
@@ -41,7 +41,7 @@
 		<separator/>
 		<button id="ID_TAB_HOME" text="Home"/>
 		<button id="ID_TAB_LIBRARY" text="Library"/>
-		<button id="ID_TAB_MEDIA" text="Media"/>
+		<button id="ID_TAB_MEDIA" text="Media Player"/>
 		<button id="ID_TAB_SEARCH" text="Search"/>
 		<button id="ID_TAB_TRANSFERS" text="Transfers"/>
 		<button id="ID_TAB_NETWORK" text="Network"/>
@@ -245,6 +245,8 @@
 	<toolbar name="CLibraryFileView.Physical.Basic">
 		<button id="ID_LIBRARY_LAUNCH" text="Open or Play"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Add to Playlist"/>
+		<separator/>
+		<button id="ID_WEBSERVICES_LIST" text="Web Services"/>
 		<rightAlign/>
 		<separator/>
 		<control id="IDC_SEARCH_BOX" width="120"/>
@@ -255,6 +257,8 @@
 		<button id="ID_LIBRARY_ENQUEUE" text="Add to Playlist"/>
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Properties"/>
+		<separator/>
+		<button id="ID_WEBSERVICES_LIST" text="Web Services"/>
 		<separator/>
 		<button id="ID_LIBRARY_MOVE" text="Move"/>
 		<button id="ID_LIBRARY_COPY" text="Copy"/>
@@ -268,6 +272,8 @@
 		<button id="ID_LIBRARY_LAUNCH" text="Open or Play"/>
 		<button id="ID_LIBRARY_ENQUEUE" text="Add to Playlist"/>
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Play Album"/>
+		<separator/>
+		<button id="ID_WEBSERVICES_LIST" text="Web Services"/>
 		<rightAlign/>
 		<separator/>
 		<control id="IDC_SEARCH_BOX" width="120"/>
@@ -279,6 +285,8 @@
 		<button id="ID_LIBRARY_FOLDER_ENQUEUE" text="Play Album"/>
 		<separator/>
 		<button id="ID_LIBRARY_PROPERTIES" text="Properties"/>
+		<separator/>
+		<button id="ID_WEBSERVICES_LIST" text="Web Services"/>
 		<rightAlign/>
 		<separator/>
 		<control id="IDC_SEARCH_BOX" width="120"/>
@@ -511,6 +519,7 @@
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
+			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Tabbed" type="bar">
@@ -548,7 +557,7 @@
 				<item id="ID_VIEW_DOWNLOADS" text="_Downloads" shortcut="F3"/>
 				<item id="ID_VIEW_UPLOADS" text="_Uploads" shortcut="F4"/>
 				<item id="ID_VIEW_LIBRARY" text="_Library" shortcut="F5"/>
-				<item id="ID_VIEW_MEDIA" text="_Media" shortcut="F6"/>
+				<item id="ID_VIEW_MEDIA" text="_Media Player" shortcut="F6"/>
 				<separator/>
 				<item id="ID_VIEW_SECURITY" text="Se_curity" shortcut="F7"/>
 				<item id="ID_VIEW_HOSTS" text="H_ost Cache" shortcut="F8"/>
@@ -609,6 +618,7 @@
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
+			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<menu name="CMainWnd.Windowed" type="bar">
@@ -636,7 +646,7 @@
 			<item id="ID_VIEW_DOWNLOADS" text="_Downloads" shortcut="F3"/>
 			<item id="ID_VIEW_UPLOADS" text="_Uploads" shortcut="F4"/>
 			<item id="ID_VIEW_LIBRARY" text="_Library" shortcut="F5"/>
-			<item id="ID_VIEW_MEDIA" text="_Media" shortcut="F6"/>
+			<item id="ID_VIEW_MEDIA" text="_Media Player" shortcut="F6"/>
 			<separator/>
 			<item id="ID_VIEW_SECURITY" text="Se_curity" shortcut="F7"/>
 			<item id="ID_VIEW_HOSTS" text="H_ost Cache" shortcut="F8"/>
@@ -700,13 +710,14 @@
 			<item id="ID_HELP_VERSION_CHECK" text="Check for new _version"/>
 			<separator/>
 			<item id="ID_HELP_ABOUT" text="_About Shareaza..."/>
+			<item id="ID_HELP_DONATE" text="_Donate to Shareaza Project!"/>
 		</menu>
 	</menu>
 	<!-- VIEW POPUP -->
 	<menu name="CMainWnd.View.Basic">
 		<item id="ID_TAB_HOME" text="_Home"/>
 		<item id="ID_TAB_LIBRARY" text="_Library"/>
-		<item id="ID_TAB_MEDIA" text="_Media"/>
+		<item id="ID_TAB_MEDIA" text="_Media Player"/>
 		<item id="ID_TAB_SEARCH" text="_Search"/>
 		<item id="ID_TAB_TRANSFERS" text="_Downloads"/>
 		<separator/>
@@ -720,7 +731,7 @@
 	<menu name="CMainWnd.View.Tabbed">
 		<item id="ID_TAB_HOME" text="_Home"/>
 		<item id="ID_TAB_LIBRARY" text="_Library"/>
-		<item id="ID_TAB_MEDIA" text="_Media"/>
+		<item id="ID_TAB_MEDIA" text="_Media Player"/>
 		<item id="ID_TAB_SEARCH" text="_Search"/>
 		<item id="ID_TAB_TRANSFERS" text="_Transfers"/>
 		<item id="ID_TAB_NETWORK" text="_Network"/>
@@ -792,7 +803,7 @@
 	<menu name="CHomeWnd.Basic">
 		<item id="ID_TAB_HOME" text="_Home"/>
 		<item id="ID_TAB_LIBRARY" text="_Library"/>
-		<item id="ID_TAB_MEDIA" text="_Media"/>
+		<item id="ID_TAB_MEDIA" text="_Media Player"/>
 		<item id="ID_TAB_SEARCH" text="_Search"/>
 		<item id="ID_TAB_TRANSFERS" text="_Downloads"/>
 		<separator/>
@@ -806,7 +817,7 @@
 	<menu name="CHomeWnd.Tabbed">
 		<item id="ID_TAB_HOME" text="_Home"/>
 		<item id="ID_TAB_LIBRARY" text="_Library"/>
-		<item id="ID_TAB_MEDIA" text="_Media"/>
+		<item id="ID_TAB_MEDIA" text="_Media Player"/>
 		<item id="ID_TAB_SEARCH" text="_Search"/>
 		<item id="ID_TAB_TRANSFERS" text="_Transfers"/>
 		<item id="ID_TAB_NETWORK" text="_Network"/>
@@ -1530,6 +1541,10 @@
 			<item id="ID_IRC_BANKICK" text="Kick+Ban"/>
 			<item id="ID_IRC_BANKICKWHY" text="Kick+Ban (why?)"/>
 		</menu>
+	</menu>
+	<menu name="WebServices.List.Menu">
+		<item id="ID_LIBRARY_BITZI_DOWNLOAD" text="_Bitzi"/>
+		<item id="ID_WEBSERVICES_SHAREMONKEY" text="_ShareMonkey"/>
 	</menu>
 </menus>
 
@@ -2287,6 +2302,7 @@
 	<tip id="ID_HELP_WEB_4" message="Visit this website"/>
 	<tip id="ID_HELP_WEB_5" message="Visit this website"/>
 	<tip id="ID_HELP_WEB_6" message="Visit this website"/>
+	<tip id="ID_HELP_DONATE" message="If you want, you can donate to our legal fund and show your appreciation."/>
 	<tip id="ID_HITMONITOR_CLEAR" message="Clear the hit monitor buffer."/>
 	<tip id="ID_HITMONITOR_PAUSE" message="Pause hit monitoring."/>
 	<tip id="ID_HITMONITOR_SEARCH" message="Search the network for the selected term."/>
@@ -2502,6 +2518,8 @@
 	<tip id="ID_WINDOW_TILE_HORZ" message="Arrange open windows as horizontal, non-overlapping tiles."/>
 	<tip id="ID_WINDOW_TILE_VERT" message="Arrange open windows as vertical, non-overlapping tiles."/>
 	<tip id="ID_WINDOW_TOOLBAR" message="Show or hide the toolbar."/>
+	<tip id="ID_WEBSERVICES_LIST" message="Choose the web service to get more information about the selected file."/>
+	<tip id="ID_WEBSERVICES_SHAREMONKEY" message="Search for the file infomation using ShareMonkey service."/>
 	<!-- PLUGIN TIPS -->
 	<tip id="ImageViewer_BestFit" message="Resize the image to fit within the window."/>
 	<tip id="ImageViewer_ActualSize" message="Show the image at its natural size."/>
